src/comps/fishtank/index.css
@keyframes sway {
  0%, 100% {
    transform: 
      rotateY(180deg)
      rotateZ(-13deg) 
      skewX(0.3deg)
      scaleY(1);
  }
  33% {
    transform: 
      rotateY(180deg)
      rotateZ(-15deg) 
      skewX(-0.2deg)
      scaleY(0.995);
  }
  66% {
    transform: 
      rotateY(180deg)
      rotateZ(-11deg) 
      skewX(0.4deg)
      scaleY(1);
  }
}

@keyframes sway2 {
  0%, 100% {
    transform: 
      rotateZ(-13deg) 
      skewX(-0.2deg)
      scaleY(0.995);
  }
  33% {
    transform: 
      rotateZ(-9deg) 
      skewX(0.4deg)
      scaleY(1);
  }
  66% {
    transform: 
      rotateZ(-11deg) 
      skewX(0.3deg)
      scaleY(1);
  }
}

@keyframes sway3 {
  0%, 100% {
    transform: 
      rotateZ(-6deg) 
      skewX(0.4deg)
      scaleY(1);
  }
  33% {
    transform: 
      rotateZ(-8deg) 
      skewX(0.3deg)
      scaleY(1);
  }
  66% {
    transform: 
      rotateZ(-10deg) 
      skewX(-0.2deg)
      scaleY(0.995);
  }
}

@keyframes bubbleSway {
  0%, 100% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(-2px);
  }
  50% {
    transform: translateX(2px);
  }
  75% {
    transform: translateX(-1px);
  }
}


.bubble-holder {
  width: 2%;
  aspect-ratio: 1/1;
  position: absolute;
  z-index: 1;
  animation: bubble .5s ease-in;
  transform: translate(-50%, -50%);
  transition: transform 0.15s ease-in-out;
}

.bubble {
  width: 100%;
  animation: bubbleSway 2s infinite ease-in-out;
  cursor: pointer;
}

.fishtank {
    background-color: #13a7ff;
    position: sticky;
    bottom: 0px;
    overflow: hidden;
    min-height: max(50svh, 400px);
    max-height: 80svh;
    user-select: none;
    touch-action: none;
    -ms-touch-action: none;
    cursor: none;
}

.fishtank:hover .ham {
  opacity: 1;
}

.statue {
    position: absolute;
    bottom: 5%;
    height: 58%;
    transform: rotate(27deg);
    right: -8%;
    opacity: 0.6;
}

.gradient {
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 50%;
    left: 0%;
    background: linear-gradient(180deg, #00000000, #13a7ff);
    z-index: 1;
}

.ham {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  aspect-ratio: 1/1;
  width: 2em !important;
  height: auto !important;
  opacity: 0;
  transition: opacity .2s ease-in-out;
  z-index: 2;
  pointer-events: none;
  user-select: none;
}

.coral-1 {
    position: absolute;
    height: 42%;
    bottom: -4%;
    left: -2%;
    z-index: 2;
    opacity: 0.9;
    transform: rotateY(180deg) rotateZ(-10deg);
    animation: sway 6s infinite linear;
    transform-origin: bottom center;
}

.coral-3 {
    position: absolute;
    height: 30%;
    bottom: 0%;
    left: 30%;
    transform: rotateZ(-5deg);
    z-index: 0;
    opacity: 1;
    animation: sway3 6s infinite linear;
    transform-origin: bottom center;
}

.coral-2 {
    position: absolute;
    height: 33%;
    bottom: -3%;
    left: 56%;
    transform: rotateZ(-8deg);
    z-index: 1;
    opacity: 0.6;
    animation: sway2 6s infinite linear;
    transform-origin: bottom center;
}

.coral-1, .coral-2, .coral-3, .statue {
  pointer-events: none;
  user-select: none;
}

